cmake_minimum_required(VERSION 3.17)
project(LearningOfC__)

set(CMAKE_CXX_STANDARD 14)

add_executable(LearningOfC__ 01.CPP的标准库.cpp 02.CPP和C的常量.cpp 03.CPP的引用和C的引用.cpp 04.CPP常量引用.cpp 05.CPP函数重载.cpp 06.CPP默认参数.cpp 07.CPP预留参数.cpp 08.CPP面向对象的特性.cpp Manager.cpp Manager.h 09.命名空间.cpp 10.构造函数、拷贝构造函数、析构函数.cpp 11.指针常量和常量指针.cpp 12.浅拷贝.cpp 13.深拷贝.cpp 14.可变参数.cpp 15.静态变量和静态方法.cpp TestStatic.cpp TestStatic.h 16.const修饰方法.cpp 17.友元函数.cpp 18.友元类.cpp 19.函数总结.cpp TestMethod.cpp TestMethod.h 20.类外运算符重载.cpp 21.类内运算符重载.cpp 22.继承.cpp 23.多继承.cpp 24.虚基类.cpp 25.模版函数.cpp 26.goto语句.cpp 27.虚函数.cpp 28.纯虚函数.cpp)